// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text align prop sets text-align 1`] = `
<div
  className="kWHOmj"
/>
`;

exports[`Text bold prop sets font-weight 1`] = `
<div
  className="kePwLE"
/>
`;

exports[`Text caps prop sets text-transform 1`] = `
<div
  className="eQQMXH"
/>
`;

exports[`Text italic prop sets font-style 1`] = `
<div
  className="gYpqKD"
/>
`;

exports[`Text mt prop sets margin-top 1`] = `
<div
  className="gedfBq"
/>
`;

exports[`Text regular prop sets font-weight 1`] = `
<div
  className="fuyMDg"
/>
`;

exports[`Text renders 1`] = `
<div
  className=""
/>
`;
